--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
     <title>Tic Tac Toe</title>
   </head>
   <body>
@@ -18,6 +19,7 @@
       <div class="b" id="b6"></div>
       <div class="b" id="b7"></div>
       <div class="b" id="b8"></div>
+      <input type="submit" value="reset" id="reset-btn" />
     </div>
 
     <script src="app.js"></script>
